[package]
name = "captfencoder"
version = "3.3.0"
authors = ["guyoung"]
edition = "2021"
build = "build.rs"



[dependencies]

fltk = "1.4"
fltk-theme = "0.7"
rhai = "1.15"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
pollster = "0.2"
base64 = "0.13"
anyhow = "1"
image = "0.23"
clipboard = "0.5"
rust-embed = "6.3"
webbrowser = "0.5"
rand = "0.8"
dyn-clone = "1.0"
sysinfo = "0.29"
chrono = "0.4"

captfencoder_encoding = { version = "1.0.0", path = "../encoding"}
captfencoder_query = { version = "1.0.0", path = "../query"}
captfencoder_misc = { version = "1.0.0", path = "../misc"}


lazy_static = "1.4"
state = "0.5"
enum-ordinalize = "3.1"
sublime_fuzzy = "0.7"
crossbeam-channel = "0.5"
event-emitter-rs = "0.1"
hey_listen = "0.5"

num = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
primal = "0.3"

[build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
ProductName = "CaptfEncoder"
ProductVersion = "3.3.0"
OriginalFilename = "CaptfEncoder.exe"
LegalCopyright = "Copyright © Guyoung studio 2022"


[package.metadata.bundle]
name = "CaptfEncoder"
identifier = "net.guyoung.captfencoder"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
#deb_depends = []
osx_minimum_system_version = "10.0"