[package]
name = "captfencoder_query"
version = "1.0.0"
authors = ["guyoung"]
edition = "2021"


[lib]



[dependencies]
reqwest = { version = "0.11", features = ["json"] }

scraper = "0.12"
selectors = "0.22"

trust-dns-resolver = "0.20"

tokio = { version = "1.14", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1"


